--- a/Docker/nginx/vhosts/my_server_block_http_https.conf
+++ b/Docker/nginx/vhosts/my_server_block_http_https.conf
@@ -21,9 +21,16 @@ server {
         # fastcgi_pass [PHP_FPM_LINK_NAME]:9000;
         fastcgi_pass app:9000;
         fastcgi_index index.php;
+        fastcgi_buffers 16 32k;
+        fastcgi_buffer_size 64k;
+        fastcgi_busy_buffers_size 64k;
         include fastcgi.conf;
         include fastcgi_params;
         # fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param HTTPS on;
     }
+    # access_log /opt/bitnami/nginx/logs/localhost_access.log;
+    # error_log /opt/bitnami/nginx/logs/localhost_error.log;
+    access_log /dev/stdout;
+    error_log /dev/stdout info;
 }
