Simplified and standadized the example

--- a/Docker/nginx/vhosts/my_server_block_http_https.conf
+++ b/Docker/nginx/vhosts/my_server_block_http_https.conf
@@ -1,36 +1,18 @@
 server {
-    listen 0.0.0.0:8143 ssl;
-    listen 0.0.0.0:8181;
-
-    server_name 127.0.0.1 localhost example.com www.example.com myapp.example.com;
+    listen 0.0.0.0:8080;
+    server_name myapp.example.com;
 
     root /app/my_app/public;
     index index.php;
 
-    ssl_certificate /opt/bitnami/nginx/conf/bitnami/certs/server.crt;
-    ssl_certificate_key /opt/bitnami/nginx/conf/bitnami/certs/server.key;
-    ssl_session_cache shared:SSL:1m;
-    ssl_session_timeout 5m;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
-
     location / {
-        try_files $uri $uri/ /index.php?q=$uri&$args;
+        try_files $uri $uri/ @proxy;
     }
-    location ~ \.php$ {
-        # fastcgi_pass [PHP_FPM_LINK_NAME]:9000;
-        fastcgi_pass app:9000;
+
+    location @proxy {
         fastcgi_index index.php;
-        fastcgi_buffers 16 32k;
-        fastcgi_buffer_size 64k;
-        fastcgi_busy_buffers_size 64k;
-        include fastcgi.conf;
         include fastcgi_params;
-        # fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param HTTPS on;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_pass php-fpm:9000;
     }
-    # access_log /opt/bitnami/nginx/logs/localhost_access.log;
-    # error_log /opt/bitnami/nginx/logs/localhost_error.log;
-    access_log /dev/stdout;
-    error_log /dev/stdout info;
 }
